[FIX] web: Table background should be transparent, so that the columns in week mode is visible in enterprise

--- a/addons/web/static/src/less/web_calendar.less
+++ b/addons/web/static/src/less/web_calendar.less
@@ -239,4 +239,9 @@
             width: 100%;
         }
     }
+    .o_calendar_view {
+        table {
+            background-color: transparent;
+        }
+    }
 }
